Fix vercel.json JSON escaping

--- a/vercel.json
+++ b/vercel.json
@@ -8,8 +8,8 @@
   ],
   "routes": [
     { "src": "^/api(?:/(.*))?$", "dest": "/api/[...route].mjs" },
-    { "src": "^/app\.js$", "dest": "/app.js" },
-    { "src": "^/styles\.css$", "dest": "/styles.css" },
+    { "src": "^/app\\.js$", "dest": "/app.js" },
+    { "src": "^/styles\\.css$", "dest": "/styles.css" },
     { "src": "^/(.*)$", "dest": "/index.html" }
   ]
 }
