--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "node src/server.mjs",
+    "dev": "node --watch src/server.mjs",
     "test": "node --test tests/*.test.mjs"
   },
   "keywords": [],
